dev/python.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: python
  name: python-deployment
  namespace: hrbuddy
spec:
  selector:
    matchLabels:
      app: python
  template:
    metadata:
      labels:
        app: python
    spec:
      containers:
      - image: 1van4o/cv-analyzer:4.0
        name: python
        ports:
        - containerPort: 8000
          protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: python-service
  namespace: hrbuddy
spec:
  selector:
    app: python
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
